fixing spacing in 'My Services' section and removing hover jump on contact buttons

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -27,6 +27,7 @@ footer p {
 
 .button-contact {
   display: flex;
+  border: 1px solid transparent;
   align-items: center;
   justify-content: space-between;
   background-color: var(--gray-300);
